# opensciencelabs.github.io-archive

./: .buildinfo  .gitignore  404.html  CNAME  COC.html  CODE_OF_CONDUCT.md  Makefile  README.md  action.yml  archive.html  cSpell.json  coc-en.html  coc-es.html  conf.py  environment.yaml  episodes.json  genindex.html  index.html  intro.html  objects.inv  pyproject.toml  requirements_dev.txt  robots.txt  rss.xml  search.html  searchindex.js  sitemap.xml  sitemapindex.xml
2019/: index.html
2020/: index.html
2021/: index.html
2022/: index.html
About/: index.html
FAQ/: faq.html
_sources/: coc-en.md  coc-es.md  intro.md
about/: index.html  index.md
articles/: guide-es.html
authors/: alan-hurtarte.xml  anavelyz-perez.xml  ever-vino.xml  index.html  lua-bida-vacaro.xml  mariangela-petrizzo-paez.xml  open-science-labs-team.xml  por-rainer-palm.xml  rainer-palm.xml  yurely-camacho.xml
blog/: index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html
calendar/: index.html
categories/: artificial-intelligence.xml  automation.xml  base-de-dados.xml  bash.xml  bi.xml  blockchain.xml  carpentries.xml  cat_artificial-intelligence.xml  cat_bash.xml  cat_citation.xml  cat_citizen-science.xml  cat_codigo-abierto.xml  cat_communication.xml  cat_dashboard.xml  cat_data-science.xml  cat_data.xml  cat_documentation.xml  cat_git.xml  cat_ide.xml  cat_jupyter.xml  cat_learning.xml  cat_machine-learning.xml  cat_markdown.xml  cat_mentoring.xml  cat_nft.xml  cat_open-access.xml  cat_open-data.xml  cat_open-science-web3-ethereum.xml  (+83 more)
(+519 files in other folders)
