[tool.poetry]
name = "opensciencelabs.github.io"
version = "1.0.0"
description = "Open Science Labs Web page"
authors = ["Ivan Ogasawara <ivan.ogasawara@gmail.com>"]
license = "CC BY SA 4.0"

[tool.poetry.dependencies]
python = "^3.10"
Nikola = "^8.1"
notebook = "^6.4.8"
nbformat = "^5.1.3"
nbconvert = "^6.4.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
watchdog = "^2.1.6"
aiohttp = "^3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
